Amélioration de l'affichage de l'historique du jeu.